# conda-store

./: .pre-commit-config.yaml
.github/workflows/: build_docker_image.yaml  release.yaml  test_build_docker_image.yaml  tests.yaml
conda-store/: environment.yaml  pyproject.toml
conda-store-server/: environment-dev.yaml  environment-macos-dev.yaml  environment-windows-dev.yaml  environment.yaml  pyproject.toml
