[build-system]
# https://github.com/ofek/hatch-vcs
requires = ["hatchling>=1.14.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-store-server"
description = "Conda Environment Management, Builds, and Serve"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
keywords = ["conda"]
authors = [
  { name = "Christopher Ostrouchov", email = "crhsi.ostrouchov@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "alembic",
  "celery",
  # we need platform dependent dependencies here
  "conda-docker; sys_platform == 'linux'",
  "python-docker",
  "conda-pack",
  "conda-package-handling",
  "conda-package-streaming",
  "conda-lock >=1.0.5",
  "constructor",
  "fastapi",
  "filelock",
  "itsdangerous",
  "jinja2",
  "minio",
  "pyjwt",
  "psycopg2-binary",
  "pymysql",
  "pyyaml",
  "redis",
  "requests",
  "pydantic<2",
  "python-multipart",
  "sqlalchemy",
  "traitlets",
  "uvicorn",
  "yarl",
  # conda (which should not be included here) #TODO: @trallard this needs check because it is a hard dependency
]
dynamic = ["version"]

[project.urls]
Homepage = "https://conda.store/"
Source = "https://github.com/conda-incubator/conda-store"

[tool.hatch.version]
path = "conda_store_server/__init__.py"

[project.optional-dependencies]
dev = ["build",
  "twine",
  "flower",
  "pre-commit",
  "sphinx",
  "myst-parser",
  "sphinx-panels",
  "sphinx-copybutton",
  "pydata-sphinx-theme",
  "pytest",
  "pytest-mock",
  "pytest-playwright",
]

[tool.hatch.envs.dev.scripts]
lint = ["pre-commit run --all"]
unit-test = "pytest tests -v"
playwright-test = [
  "playwright install",
  "pytest --video on ../tests/test_playwright.py"
]
integration-test = ["pytest ../tests/test_api.py ../tests/test_metrics.py"]

user-journey-test = ["pytest -m user_journey"]

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.sdist.hooks.custom]

[project.scripts]
conda-store-server = "conda_store_server.server.__main__:main"
conda-store-worker = "conda_store_server.worker.__main__:main"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']

[tool.ruff]
ignore = [
  "E501", # line-length

]

[tool.check-wheel-contents]
# ignore alembic migrations https://github.com/jwodder/check-wheel-contents?tab=readme-ov-file#w004--module-is-not-located-at-importable-path
ignore = ["W004"]

[tool.pytest.ini_options]
markers = [
  "playwright: mark a test as a playwright test",
  "integration: mark a test as an integration test",
  "user_journey: mark a test as a user journey test",
]
